lustre/osd-ldiskfs/osd_handler.c
@@ -1742,7 +1742,7 @@ static int osd_declare_attr_set(const struct lu_env *env,
 	qid_t			gid;
 	long long               bspace;
 	int			rc = 0;
-	bool			allocated;
+	bool			enforce;
 	ENTRY;
 
 	LASSERT(dt != NULL);
@@ -1770,18 +1770,19 @@ static int osd_declare_attr_set(const struct lu_env *env,
 	 * We still need to call the osd_declare_qid() to calculate the journal
 	 * credits for updating quota accounting files and to trigger quota
 	 * space adjustment once the operation is completed.*/
-	if ((attr->la_valid & LA_UID) != 0 &&
-	     attr->la_uid != (uid = i_uid_read(obj->oo_inode))) {
+	if (attr->la_valid & LA_UID || attr->la_valid & LA_GID) {
+		/* USERQUOTA */
+		uid = i_uid_read(obj->oo_inode);
 		qi->lqi_type = USRQUOTA;
-
+		enforce = (attr->la_valid & LA_UID) && (attr->la_uid != uid);
 		/* inode accounting */
 		qi->lqi_is_blk = false;
 
-		/* one more inode for the new owner ... */
+		/* one more inode for the new uid ... */
 		qi->lqi_id.qid_uid = attr->la_uid;
 		qi->lqi_space      = 1;
-		allocated = (attr->la_uid == 0) ? true : false;
-		rc = osd_declare_qid(env, oh, qi, allocated, NULL);
+		/* Reserve credits for the new uid */
+		rc = osd_declare_qid(env, oh, qi, NULL, enforce, NULL);
 		if (rc == -EDQUOT || rc == -EINPROGRESS)
 			rc = 0;
 		if (rc)
@@ -1790,7 +1791,7 @@ static int osd_declare_attr_set(const struct lu_env *env,
 		/* and one less inode for the current uid */
 		qi->lqi_id.qid_uid = uid;
 		qi->lqi_space      = -1;
-		rc = osd_declare_qid(env, oh, qi, true, NULL);
+		rc = osd_declare_qid(env, oh, qi, obj, enforce, NULL);
 		if (rc == -EDQUOT || rc == -EINPROGRESS)
 			rc = 0;
 		if (rc)
@@ -1799,38 +1800,40 @@ static int osd_declare_attr_set(const struct lu_env *env,
 		/* block accounting */
 		qi->lqi_is_blk = true;
 
-		/* more blocks for the new owner ... */
+		/* more blocks for the new uid ... */
 		qi->lqi_id.qid_uid = attr->la_uid;
 		qi->lqi_space      = bspace;
-		allocated = (attr->la_uid == 0) ? true : false;
-		rc = osd_declare_qid(env, oh, qi, allocated, NULL);
+		/*
+		 * Credits for the new uid has been reserved, re-use "obj"
+		 * to save credit reservation.
+		 */
+		rc = osd_declare_qid(env, oh, qi, obj, enforce, NULL);
 		if (rc == -EDQUOT || rc == -EINPROGRESS)
 			rc = 0;
 		if (rc)
 			RETURN(rc);
 
-		/* and finally less blocks for the current owner */
+		/* and finally less blocks for the current uid */
 		qi->lqi_id.qid_uid = uid;
 		qi->lqi_space      = -bspace;
-		rc = osd_declare_qid(env, oh, qi, true, NULL);
+		rc = osd_declare_qid(env, oh, qi, obj, enforce, NULL);
 		if (rc == -EDQUOT || rc == -EINPROGRESS)
 			rc = 0;
 		if (rc)
 			RETURN(rc);
-	}
 
-	if (attr->la_valid & LA_GID &&
-	    attr->la_gid != (gid = i_gid_read(obj->oo_inode))) {
+		/* GROUP QUOTA */
+		gid = i_gid_read(obj->oo_inode);
 		qi->lqi_type = GRPQUOTA;
+		enforce = (attr->la_valid & LA_GID) && (attr->la_gid != gid);
 
 		/* inode accounting */
 		qi->lqi_is_blk = false;
 
-		/* one more inode for the new group owner ... */
+		/* one more inode for the new gid ... */
 		qi->lqi_id.qid_gid = attr->la_gid;
 		qi->lqi_space      = 1;
-		allocated = (attr->la_gid == 0) ? true : false;
-		rc = osd_declare_qid(env, oh, qi, allocated, NULL);
+		rc = osd_declare_qid(env, oh, qi, NULL, enforce, NULL);
 		if (rc == -EDQUOT || rc == -EINPROGRESS)
 			rc = 0;
 		if (rc)
@@ -1839,7 +1842,7 @@ static int osd_declare_attr_set(const struct lu_env *env,
 		/* and one less inode for the current gid */
 		qi->lqi_id.qid_gid = gid;
 		qi->lqi_space      = -1;
-		rc = osd_declare_qid(env, oh, qi, true, NULL);
+		rc = osd_declare_qid(env, oh, qi, obj, enforce, NULL);
 		if (rc == -EDQUOT || rc == -EINPROGRESS)
 			rc = 0;
 		if (rc)
@@ -1848,20 +1851,19 @@ static int osd_declare_attr_set(const struct lu_env *env,
 		/* block accounting */
 		qi->lqi_is_blk = true;
 
-		/* more blocks for the new owner ... */
+		/* more blocks for the new gid ... */
 		qi->lqi_id.qid_gid = attr->la_gid;
 		qi->lqi_space      = bspace;
-		allocated = (attr->la_gid == 0) ? true : false;
-		rc = osd_declare_qid(env, oh, qi, allocated, NULL);
+		rc = osd_declare_qid(env, oh, qi, obj, enforce, NULL);
 		if (rc == -EDQUOT || rc == -EINPROGRESS)
 			rc = 0;
 		if (rc)
 			RETURN(rc);
 
-		/* and finally less blocks for the current owner */
+		/* and finally less blocks for the current gid */
 		qi->lqi_id.qid_gid = gid;
 		qi->lqi_space      = -bspace;
-		rc = osd_declare_qid(env, oh, qi, true, NULL);
+		rc = osd_declare_qid(env, oh, qi, obj, enforce, NULL);
 		if (rc == -EDQUOT || rc == -EINPROGRESS)
 			rc = 0;
 		if (rc)
@@ -1927,6 +1929,7 @@ static int osd_quota_transfer(struct inode *inode, const struct lu_attr *attr)
 		struct iattr	iattr;
 		int		rc;
 
+		ll_vfs_dq_init(inode);
 		iattr.ia_valid = 0;
 		if (attr->la_valid & LA_UID)
 			iattr.ia_valid |= ATTR_UID;
@@ -1991,7 +1994,6 @@ static int osd_attr_set(const struct lu_env *env,
 	}
 
         inode = obj->oo_inode;
-	ll_vfs_dq_init(inode);
 
 	rc = osd_quota_transfer(inode, attr);
 	if (rc)
@@ -2381,7 +2383,7 @@ static int osd_declare_object_create(const struct lu_env *env,
 		RETURN(0);
 
 	rc = osd_declare_inode_qid(env, attr->la_uid, attr->la_gid, 1, oh,
-				   false, false, NULL, false);
+				   osd_dt_obj(dt), false, NULL, false);
 	if (rc != 0)
 		RETURN(rc);
 
@@ -2452,12 +2454,12 @@ static int osd_declare_object_destroy(const struct lu_env *env,
 			     osd_dto_credits_noquota[DTO_INDEX_DELETE] + 3);
 	/* one less inode */
 	rc = osd_declare_inode_qid(env, i_uid_read(inode), i_gid_read(inode),
-				   -1, oh, false, true, NULL, false);
+				   -1, oh, obj, false, NULL, false);
 	if (rc)
 		RETURN(rc);
 	/* data to be truncated */
 	rc = osd_declare_inode_qid(env, i_uid_read(inode), i_gid_read(inode),
-				   0, oh, true, true, NULL, false);
+				   0, oh, obj, true, NULL, false);
 	RETURN(rc);
 }
 
@@ -2943,6 +2945,7 @@ static int osd_declare_xattr_set(const struct lu_env *env,
 {
 	struct osd_thandle *oh;
 	int credits;
+	struct super_block *sb = osd_sb(osd_dev(dt->do_lu.lo_dev));
 
 	LASSERT(handle != NULL);
 
@@ -2958,13 +2961,16 @@ static int osd_declare_xattr_set(const struct lu_env *env,
 	} else if (strcmp(name, XATTR_NAME_VERSION) == 0) {
 		credits = 1;
 	} else {
-		struct osd_device  *osd = osd_dev(dt->do_lu.lo_dev);
-		struct super_block *sb = osd_sb(osd);
 		credits = osd_dto_credits_noquota[DTO_XATTR_SET];
 		if (buf && buf->lb_len > sb->s_blocksize) {
 			credits *= (buf->lb_len + sb->s_blocksize - 1) >>
 					sb->s_blocksize_bits;
 		}
+		/*
+		 * xattr set may involve inode quota change, reserve credits for
+		 * dquot_initialize()
+		 */
+		oh->ot_credits += LDISKFS_MAXQUOTAS_INIT_BLOCKS(sb);
 	}
 
 	osd_trans_declare_op(env, oh, OSD_OT_XATTR_SET, credits);
@@ -3074,6 +3080,7 @@ static int osd_declare_xattr_del(const struct lu_env *env,
                                  struct thandle *handle)
 {
         struct osd_thandle *oh;
+	struct super_block *sb = osd_sb(osd_dev(dt->do_lu.lo_dev));
 
 	LASSERT(dt_object_exists(dt) && !dt_object_remote(dt));
         LASSERT(handle != NULL);
@@ -3083,6 +3090,11 @@ static int osd_declare_xattr_del(const struct lu_env *env,
 
 	osd_trans_declare_op(env, oh, OSD_OT_XATTR_SET,
 			     osd_dto_credits_noquota[DTO_XATTR_SET]);
+	/*
+	 * xattr del may involve inode quota change, reserve credits for
+	 * dquot_initialize()
+	 */
+	oh->ot_credits += LDISKFS_MAXQUOTAS_INIT_BLOCKS(sb);
 
 	return 0;
 }
@@ -3552,7 +3564,7 @@ static int osd_index_declare_ea_delete(const struct lu_env *env,
 	LASSERT(inode);
 
 	rc = osd_declare_inode_qid(env, i_uid_read(inode), i_gid_read(inode),
-				   0, oh, true, true, NULL, false);
+				   0, oh, osd_dt_obj(dt), true, NULL, false);
 	RETURN(rc);
 }
 
@@ -4404,8 +4416,8 @@ static int osd_index_declare_ea_insert(const struct lu_env *env,
 		 * calculate how many blocks will be consumed by this index
 		 * insert */
 		rc = osd_declare_inode_qid(env, i_uid_read(inode),
-					   i_gid_read(inode), 0,
-					   oh, true, true, NULL, false);
+					   i_gid_read(inode), 0, oh,
+					   osd_dt_obj(dt), true, NULL, false);
 	}
 
 	if (fid == NULL)
